Added link to svgs in state_population_flag

--- a/state_population_flag.html
+++ b/state_population_flag.html
@@ -16,20 +16,30 @@
 
 <p>Here is what it would look like (stars in order of admission to the union, stripes in order of when the British colony was founded)</p>
 
+<a href="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_population.svg">
 <img src="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_population.svg">
+</a>
 
 <p>What about the same thing again but for the area of each state?</p>
 
+<a href="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_area.svg">
 <img src="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_area.svg">
+</a>
 
 <p>Here are the same flags again, but animated so you can see the difference with a traditional US flag</p>
 
+<a href="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_population_animated.svg">
 <img src="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_population_animated.svg">
+</a>
+<a href="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_area_animated.svg">
 <img src="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_area_animated.svg">
+</a>
 
 <p>And as an extra flag, one that goes between stars proportional to population and stars proportional to electoral votes in the 2012, 2016 and 2020 presidential elections</p>
 
+<a href="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_population_and_electoral_votes_animated.svg">
 <img src="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_population_and_electoral_votes_animated.svg">
+</a>
 
 </body>
 </html>
