Added link to github repo

--- a/state_population_flag.html
+++ b/state_population_flag.html
@@ -41,5 +41,9 @@
 <img src="./state_population_flag/flags/us_flag_stars_and_stripes_scaled_by_population_and_electoral_votes_animated.svg">
 </a>
 
+<a href="https://github.com/MitalAshok/state_population_flag">
+<p>Link to code used to generate flags</p>
+</a>
+
 </body>
 </html>
